@@ -65,6 +65,7 @@ BA 29- [libpari] FlxXC_to_F2xXC, F2xXC_to_ZXXC
        rnfislocalcyclo
    37- [libpari] varnmin, varnmax
    38- allow ellglobalred for E over a number field
+BA 39- [libpari] FpXQX_split_part
 
   Changed
     1- remove useless flag in idealappr: directly allow factorization
